# axiom-factory

./: .gitignore  AGENTS.md  LICENSE  README.md
.commandcode/taste/: taste.md
logic/: Cargo.toml  clippy.toml  justfile  rustfmt.toml
logic/src/: display.rs  game.rs  ids.rs  lib.rs  open.rs  parser.rs  proof.rs  subst.rs  syntax.rs  tactic.rs  vars.rs
web/: components.json  index.html  justfile  package.json  tsconfig.json  vite.config.ts
web/src/: App.svelte  main.ts  style.css
web/src/components/: Formula.svelte
web/src/lib/: appClient.ts  viewHelpers.ts  viewProps.ts
web/src/screens/: HomeScreen.svelte  ProofScreen.svelte
